--- a/todoapp/package.json
+++ b/todoapp/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "todoapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+	"name": "todoapp",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"react": "^16.4.1",
+		"react-dom": "^16.13.1",
+		"react-scripts": "1.1.4"
+	},
+	"scripts": {
+		"start": "set PORT=2113 && PORT=2113 react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	}
 }
